# dojo-003-custom-agent-and-skills

./: .gitignore  INSTRUCTIONS.html  README.md
.github/: copilot-instructions.md
_examples/task-manager/: .gitignore  README.md  docker-compose.yml  pyproject.toml  tui.py
_examples/task-manager/scripts/: migrate.py  reset-cassandra.sh  wait-for-cassandra.sh
_examples/task-manager/src/api/: dependencies.py  main.py
_examples/task-manager/src/api/routes/: tasks.py
_examples/task-manager/src/api/schemas/: task.py
_examples/task-manager/src/application/use_cases/: create_task.py  delete_task.py  get_task.py  list_tasks.py  update_task_status.py
_examples/task-manager/src/domain/entities/: task.py
_examples/task-manager/src/domain/repositories/: task_repository.py
_examples/task-manager/src/infrastructure/cassandra/: session.py
_examples/task-manager/tests/: conftest.py
_examples/task-manager/tests/functional/: test_fr_create_task.py  test_fr_list_tasks.py
_examples/task-manager/tests/unit/: test_create_task.py  test_get_task.py  test_task_entity.py
examples/clean-architecture-and-cassandra-expert/: pyproject.toml
examples/clean-architecture-and-cassandra-expert/.github/skills/cassandra-migrations/: SKILL.md
examples/clean-architecture-and-cassandra-expert/scripts/: reset-cassandra.sh
examples/clean-architecture-and-cassandra-expert/src/api/: dependencies.py
examples/clean-architecture-and-cassandra-expert/src/api/routes/: ticker_prices.py
examples/clean-architecture-and-cassandra-expert/src/application/use_cases/: get_ticker_prices.py
examples/clean-architecture-and-cassandra-expert/src/domain/repositories/: ticker_price_repository.py
examples/clean-architecture-and-cassandra-expert/tests/: conftest.py
examples/clean-architecture-and-cassandra-expert/tests/functional/: test_fr_insert_ticker_price.py
examples/clean-architecture-and-cassandra-expert/tests/unit/: test_insert_ticker_price.py  test_ticker_price_entity.py
(+24 files in other folders)
